// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ViewSource > should be able to edit a message 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ViewSource mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        View Source
      </h1>
    </div>
    <div
      class="mx_ViewSource_header"
    >
      <span
        class="mx_CopyableText"
      >
        Room ID: !roomId:example.org
        <button
          aria-labelledby="react-use-id-1"
          class="_icon-button_1215g_8 mx_CopyableText_copyButton"
          data-kind="primary"
          role="button"
          style="--cpd-icon-button-size: 28px; padding: 4px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="mx_CopyableText"
      >
        Event ID: $event2:example.org
        <button
          aria-labelledby="react-use-id-2"
          class="_icon-button_1215g_8 mx_CopyableText_copyButton"
          data-kind="primary"
          role="button"
          style="--cpd-icon-button-size: 28px; padding: 4px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="mx_DevTools_content"
    >
      <div
        class="mx_DevTools_eventTypeStateKeyGroup"
      >
        <div
          class="mx_Field mx_Field_input"
        >
          <input
            autocomplete="on"
            id="eventType"
            label="Event Type"
            placeholder="Event Type"
            size="42"
            type="text"
            value="m.room.message"
          />
          <label
            for="eventType"
          >
            Event Type
          </label>
        </div>
      </div>
      <div
        class="mx_Field mx_Field_textarea mx_DevTools_textarea"
      >
        <textarea
          autocomplete="off"
          id="evContent"
          label="Event Content"
          placeholder="Event Content"
          type="text"
        >
          {
  "body": " * Test",
  "msgtype": "m.text",
  "m.new_content": {
    "body": "Test",
    "msgtype": "m.text"
  },
  "m.relates_to": {
    "rel_type": "m.replace",
    "event_id": "$event2:example.org"
  }
}
        </textarea>
        <label
          for="evContent"
        >
          Event Content
        </label>
      </div>
    </div>
    <div
      class="mx_Dialog_buttons"
    >
      <button
        class="mx_LegacyDialogButton"
        type="button"
      >
        Back
      </button>
      <button
        class="mx_LegacyDialogButton"
        type="button"
      >
        Send
      </button>
    </div>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`ViewSource > should render 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ViewSource mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        View Source
      </h1>
    </div>
    <div
      class="mx_ViewSource_header"
    >
      <span
        class="mx_CopyableText"
      >
        Room ID: !roomId:example.org
        <button
          aria-labelledby="react-use-id-1"
          class="_icon-button_1215g_8 mx_CopyableText_copyButton"
          data-kind="primary"
          role="button"
          style="--cpd-icon-button-size: 28px; padding: 4px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </button>
      </span>
      <span
        class="mx_CopyableText"
      >
        Event ID: $event1:example.org
        <button
          aria-labelledby="react-use-id-2"
          class="_icon-button_1215g_8 mx_CopyableText_copyButton"
          data-kind="primary"
          role="button"
          style="--cpd-icon-button-size: 28px; padding: 4px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_147l5_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
              />
              <path
                d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
              />
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="mx_ViewSource_heading"
    >
      Original event source
    </div>
    <span
      class="mx_CopyableText mx_CopyableText_border"
    >
      <pre
        class="mx_SyntaxHighlight hljs language-undefined"
      >
        {
  "type": "m.room.message",
  "room_id": "!roomId:example.org",
  "sender": "@alice:example.org",
  "content": {
    "msgtype": "m.text",
    "body": "hello"
  },
  "event_id": "$event1:example.org",
  "origin_server_ts": 0,
  "unsigned": {}
}
      </pre>
      <button
        aria-labelledby="react-use-id-3"
        class="_icon-button_1215g_8 mx_CopyableText_copyButton"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 28px; padding: 4px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 5H5v9h1a1 1 0 1 1 0 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1a1 1 0 1 1-2 0z"
            />
            <path
              d="M8 10a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-9a2 2 0 0 1-2-2zm2 0v9h9v-9z"
            />
          </svg>
        </div>
      </button>
    </span>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.293 6.293a1 1 0 0 1 1.414 0L12 10.586l4.293-4.293a1 1 0 1 1 1.414 1.414L13.414 12l4.293 4.293a1 1 0 0 1-1.414 1.414L12 13.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L10.586 12 6.293 7.707a1 1 0 0 1 0-1.414"
        />
      </svg>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
